--- a/frontend/src/components/About Us/AboutUs.css
+++ b/frontend/src/components/About Us/AboutUs.css
@@ -1,8 +1,8 @@
-/* a
+.descriptionLink
 {
     color: #664C36;
     text-decoration: underline;
-} */
+}
 
 .flex-container {
     display: flex;
@@ -42,7 +42,8 @@ img {
 button.collapsible 
 {
     background-color: #eee;
-    color: #444;
+    color: #1b1b1b;
+    font-weight: 600;
     cursor: pointer;
     padding: 18px;
     width: 100%;
